-----------------------------------------------------

0.05  2017-04-24
  - Use path() in tests making prove non-dir specific.

0.04  2017-01-19
  - Tests using migration names based on their filename.

0.03  2017-01-03
  - Added citext_with_schema.t.

0.02  2016-11-11
  - Updated README to include the type of tests.

0.01  2016-10-24
  - First started repo.