@@ -2,6 +2,8 @@
 
 0.05  2017-04-24
   - Use path() in tests making prove non-dir specific.
+  - Removed HARNESS_OPTIONS=j9 due to race condition.
+  - Using to_rel instead of realpath for migration names.
 
 0.04  2017-01-19
   - Tests using migration names based on their filename.
